--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .jumbotron {
-  background-color: #6886c5;
+  background-color: #ff3f34;
   color: #fff;
   padding: 100px 0;
   text-align: center;
