--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .jumbotron {
-  background-color: #ff3f34;
-  color: #fff;
+  background-color: #6886c5;
+  color: #ffacb7;
   padding: 100px 0;
   text-align: center;
 }
